--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -16,8 +16,12 @@ permissions:
 
 
 jobs:
-  # ═══════════════════════════════════════════════
-  # ÉTAPE 1 : BUILD & TESTS
-  # ═══════════════════════════════════════════════
   build-and-test:
     uses: ./.github/workflows/build-unit-tests.yml
+
+  # ═══════════════════════════════════════════════
+  # ÉTAPE 2 : ANALYSE DE SÉCURITÉ STATIQUE (SAST)
+  # ═══════════════════════════════════════════════
+  code-quality-sast:
+    needs: build-and-test  # ⚠️ Attend que le build soit terminé
+    uses: ./.github/workflows/code-quality-sast.yml
