--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -41,3 +41,10 @@ jobs:
     uses: ./.github/workflows/sca-dependency-scan.yml
     secrets: inherit  # ⚠️ IMPORTANT pour passer NVD_API_KEY
 
+  # ═══════════════════════════════════════════════
+  # ÉTAPE 5 : SÉCURITÉ INFRASTRUCTURE AS CODE
+  # ═══════════════════════════════════════════════
+  secure-iac-dockerfile-scan:
+    needs: build-and-test  # Toujours en parallèle
+    uses: ./.github/workflows/secure-iac-dockerfile-scan.yml
+
