--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -45,9 +45,8 @@ jobs:
   # ÉTAPE 5 : SÉCURITÉ INFRASTRUCTURE AS CODE
   # ═══════════════════════════════════════════════
   secure-iac-dockerfile-scan:
-    #needs: build-and-test  # Toujours en parallèle
+    needs: build-and-test  # Toujours en parallèle
     uses: ./.github/workflows/secure-iac-dockerfile-scan.yml
-
   # ═══════════════════════════════════════════════
   # ÉTAPE 6 : BUILD & SCAN DOCKER
   # ═══════════════════════════════════════════════
