--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -54,3 +54,11 @@ jobs:
     needs: [ code-quality-sast, secret-scanning, secure-iac-dockerfile-scan ]
     uses: ./.github/workflows/build-docker-image.yml
     secrets: inherit
+
+  # ═══════════════════════════════════════════════
+  # ÉTAPE 8 : PUBLICATION
+  # ═══════════════════════════════════════════════
+  publish-docker-hub:
+    needs: [ build-and-scan-docker ]
+    uses: ./.github/workflows/publish-docker-hub.yml
+    secrets: inherit
