--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -56,9 +56,17 @@ jobs:
     secrets: inherit
 
   # ═══════════════════════════════════════════════
-  # ÉTAPE 8 : PUBLICATION
+  # ÉTAPE 7: PUBLICATION
   # ═══════════════════════════════════════════════
   publish-docker-hub:
     needs: [ build-and-scan-docker ]
     uses: ./.github/workflows/publish-docker-hub.yml
+    secrets: inherit
+
+  # ═══════════════════════════════════════════════
+  # ÉTAPE 8: DAST (Après publication Docker Hub)
+  # ═══════════════════════════════════════════════
+  dast-zap-test:
+    needs: publish-docker-hub
+    uses: ./.github/workflows/dast-zap-test.yml
     secrets: inherit
