--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -81,15 +81,29 @@ jobs:
 
 
   send-notifications:
-    needs: deploy-docker
+    name: Send Notifications
+    needs:
+      - build-and-test
+      - code-quality-sast
+      - secret-scanning
+      - sca-dependency-scan
+      - secure-iac-dockerfile-scan
+      - build-and-scan-docker
+      - deploy-docker
     runs-on: ubuntu-latest
     if: always()
+
     steps:
-      - name: Deployment status
+      - name: 📊 Check pipeline status
         run: |
-          if [ "${{ needs.deploy-docker.result }}" == "success" ]; then
-            echo "✅ Deployment successful!"
-          else
-            echo "❌ Deployment failed!"
-            exit 1
-          fi
+          echo "═══════════════════════════════════════"
+          echo "📊 PIPELINE STATUS REPORT"
+          echo "═══════════════════════════════════════"
+          echo "Build & Test: ${{ needs.build-and-test.result }}"
+          echo "SAST: ${{ needs.code-quality-sast.result }}"
+          echo "Secret Scanning: ${{ needs.secret-scanning.result }}"
+          echo "SCA: ${{ needs.sca-dependency-scan.result }}"
+          echo "IaC Security: ${{ needs.secure-iac-dockerfile-scan.result }}"
+          echo "Docker Build: ${{ needs.build-and-scan-docker.result }}"
+          echo "Deployment: ${{ needs.deploy-docker.result }}"
+          echo "═══════════════════════════════════════"
