--- a/.github/workflows/sca-dependency-scan.yml
+++ b/.github/workflows/sca-dependency-scan.yml
@@ -15,6 +15,7 @@ jobs:
   sca-dependency-scan:
     name: SCA - OWASP Dependency Check
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - name: 📥 Checkout code
