--- a/k8s/appli/appli.yaml
+++ b/k8s/appli/appli.yaml
@@ -1,19 +1,13 @@
-kind: Namespace
-apiVersion: v1
-metadata:
-  name: cesi5
-  labels:
-    kubernetes.io/metadata.name: cesi5
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cesi-demo-java
-  namespace: cesi5
+  namespace: cesi5  # ⚠️ Votre namespace !
   labels:
     app: cesi-demo-java
+    version: "1.0"
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: cesi-demo-java
@@ -22,26 +16,33 @@ spec:
       labels:
         app: cesi-demo-java
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        fsGroup: 1000
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - name: cesi-demo-java
           image: julienf1998/cesi5-demo-boost-startup:99a083e01eb190e1a8a63ee1fd8c87789c6c40e1
           ports:
             - containerPort: 8080
               name: http
-          env:
-            - name: SPRING_MONGODB_URI
-              value: "mongodb://mongodb.mongodb.svc.cluster.local:27017/demo"
-            - name: SPRING_MONGODB_DATABASE
-              value: "demo"
-            - name: MONGODB_COLLECTION_NAME
-              value: "personse"
           resources:
-            requests:
-              memory: "256Mi"
-              cpu: "250m"
             limits:
-              memory: "512Mi"
+              cpu: "1000m"
+              memory: "1Gi"
+            requests:
               cpu: "500m"
+              memory: "512Mi"
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            runAsUser: 1000
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
           livenessProbe:
             httpGet:
               path: /actuator/health/liveness
@@ -52,43 +53,15 @@ spec:
             httpGet:
               path: /actuator/health/readiness
               port: 8080
-            initialDelaySeconds: 20
+            initialDelaySeconds: 10
             periodSeconds: 5
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: cesi-demo-java-service
-  namespace: cesi5
-  labels:
-    app: cesi-demo-java
-spec:
-  type: ClusterIP
-  selector:
-    app: cesi-demo-java
-  ports:
-    - port: 80
-      targetPort: 8080
-      protocol: TCP
-      name: http
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: cesi-demo-java-ingress
-  namespace: cesi5
-  annotations:
-    # Pour K3s avec Traefik
-    traefik.ingress.kubernetes.io/router.entrypoints: web
-spec:
-  rules:
-    - host: cesi5.beincloud.io
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: cesi-demo-java-service
-                port:
-                  number: 80
+          volumeMounts:
+            - name: tmp
+              mountPath: /tmp
+            - name: logs
+              mountPath: /app/logs
+      volumes:
+        - name: tmp
+          emptyDir: {}
+        - name: logs
+          emptyDir: {}
