--- a/k8s/appli/appli.yaml
+++ b/k8s/appli/appli.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cesi-demo-java
+  name: cesi5-demo-java
   namespace: cesi5  # ⚠️ Votre namespace !
   labels:
-    app: cesi-demo-java
+    app: cesi5-demo-java
     version: "1.0"
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: cesi-demo-java
+      app: cesi5-demo-java
   template:
     metadata:
       labels:
-        app: cesi-demo-java
+        app: cesi5-demo-java
     spec:
       securityContext:
         runAsNonRoot: true
@@ -23,7 +23,7 @@ spec:
         seccompProfile:
           type: RuntimeDefault
       containers:
-        - name: cesi-demo-java
+        - name: cesi5-demo-java
           image: julienf1998/cesi5-demo-boost-startup:99a083e01eb190e1a8a63ee1fd8c87789c6c40e1
           ports:
             - containerPort: 8080
