--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   deploy-k8s:
+    if: github.actor != 'github-actions[bot]'
     name: ☸️ Deploy K8s
     runs-on: ubuntu-latest
     steps:
