--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches: [ "main" ]
     paths-ignore:
-      - 'k8s/appli/appli.yml'
-  pull_request:
-    branches: [ "main" ]
+      - 'k8s/appli/appli.yaml'
   schedule:
     - cron: '0 2 * * 1'
 
@@ -16,29 +14,29 @@ permissions:
   actions: read
 
 jobs:
-  build-and-test:
-    uses: ./.github/workflows/build-unit-tests.yml
-
-  code-quality-sast:
-    needs: build-and-test
-    uses: ./.github/workflows/code-quality-sast.yml
-    secrets: inherit
-
-  secret-scanning:
-    needs: build-and-test
-    uses: ./.github/workflows/secret-scanning.yml
-
-  sca-dependency-scan:
-    needs: build-and-test
-    uses: ./.github/workflows/sca-dependency-scan.yml
-    secrets: inherit
-
-  secure-iac-dockerfile-scan:
-    needs: build-and-test
-    uses: ./.github/workflows/secure-iac-dockerfile-scan.yml
+#  build-and-test:
+#    uses: ./.github/workflows/build-unit-tests.yml
+#
+#  code-quality-sast:
+#    needs: build-and-test
+#    uses: ./.github/workflows/code-quality-sast.yml
+#    secrets: inherit
+#
+#  secret-scanning:
+#    needs: build-and-test
+#    uses: ./.github/workflows/secret-scanning.yml
+#
+#  sca-dependency-scan:
+#    needs: build-and-test
+#    uses: ./.github/workflows/sca-dependency-scan.yml
+#    secrets: inherit
+#
+#  secure-iac-dockerfile-scan:
+#    needs: build-and-test
+#    uses: ./.github/workflows/secure-iac-dockerfile-scan.yml
 
   build-and-scan-docker:
-    needs: [ code-quality-sast, secret-scanning, sca-dependency-scan, secure-iac-dockerfile-scan ]
+    #needs: [ code-quality-sast, secret-scanning, sca-dependency-scan, secure-iac-dockerfile-scan ]
     uses: ./.github/workflows/build-docker-image.yml
     secrets: inherit
 
@@ -47,11 +45,11 @@ jobs:
     uses: ./.github/workflows/publish-docker-hub.yml
     secrets: inherit
 
-  dast-dynamic-security-testing:
-    needs: publish-docker-hub
-    #    uses: ./.github/workflows/dast-dynamic-security-testing.yml
-    uses: ./.github/workflows/dast-zap-test.yml
-    secrets: inherit
+#  dast-dynamic-security-testing:
+#    needs: publish-docker-hub
+#    #    uses: ./.github/workflows/dast-dynamic-security-testing.yml
+#    uses: ./.github/workflows/dast-zap-test.yml
+#    secrets: inherit
 
   #  deploy-docker:
   #    needs: dast-dynamic-security-testing
@@ -59,6 +57,6 @@ jobs:
   #    secrets: inherit
 
   deploy-k8s:
-    needs: dast-dynamic-security-testing
+    needs: publish-docker-hub
     uses: ./.github/workflows/deploy-k8s.yml
     secrets: inherit
